--- a/Lab_01/Lab_01.css
+++ b/Lab_01/Lab_01.css
@@ -126,8 +126,8 @@
 
         /* Links */
         .links-grid {
-          display: grid;
-          grid-template-columns: repeat(auto-fit, minmax(25px, 1fr));
+          display: flex;
+          flex-direction: column;
           gap: 1.5rem;
           margin-top: 1.5rem;
         }
